# Automated-Financial-Data-Analysis-for-A-shares

./: .env.example  .gitignore  01_RoyalFlushData2csv_10years.py  02_CheckStatements.py  03_ExtractCalc.py  04_FinancialCoreMetrics.py  Generate_DCF_Valuation.py  README.md  Rebuild_BS.py  Rebuild_CF.py  Rebuild_PL.py  environment.yml  excel_utils.py  generate_dcf_valuation.py  generate_html_report.py  llm_client.py  pipeline_audit.ipynb  pipeline_utils.py  pyproject.toml  rebuild_balance_sheet.py  rebuild_cash_flow.py  rebuild_income_statement.py  requirements.txt  run_pipeline.py  step1_convert_xls_to_csv.py  step2_check_statements.py  step3_extract_metrics.py  step4_metrics_report.py
afda/: __init__.py  analyze_rebuilt_statements.py  batch_run.py  checkpoint.py  dcf_core.py  dcf_excel_sheets.py  dcf_excel_styles.py  dcf_types.py  excel_utils.py  generate_dcf_valuation.py  generate_html_report.py  html_report_core.py  input_validation.py  llm_client.py  logging_config.py  pipeline_utils.py  rebuild_balance_sheet.py  rebuild_cash_flow.py  rebuild_income_statement.py  run_pipeline.py  statement_base.py  statement_mapping.py  step1_convert_xls_to_csv.py  step2_check_statements.py  step3_extract_metrics.py  step4_metrics_report.py  validate_rebuilt_statements.py  valuation_config.py
assets/: echarts.min.js
configs/: default_valuation.json  industry_profiles.json  mapping_balance_sheet.json  mapping_cash_flow.json  mapping_income_statement.json
demo/: 002311_debt_year.xls  Info.csv
rawdata/: 600406_benefit_year.xls  600406_cash_year.xls  600406_debt_year.xls  Info.csv  (+1 more)
(+14 files in other folders)
