[project]
name = "automated-financial-data-analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "xlrd>=2.0.1",
    "tabulate>=0.9",
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.uv]
constraint-dependencies = [
    "nbconvert<7.17",
]
